--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -12,17 +13,18 @@
         <nav>
             <ul>
                 <li>
-                    <a href=""></a>
+                    <a href="index.html">inicio</a>
                 </li>
                 <li>
-                    <a href=""></a>
+                    <a href="contacto.html">contacto</a>
                 </li>
                 <li>
-                    <a href=""></a>
+                    <a href="">enlace 3</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <h1>inicio</h1>
 </body>
 
 </html>
