Crear la seccion galeria y linkarla en el menu de navegacion

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="contacto.html">contacto</a>
                 </li>
                 <li>
-                    <a href="">enlace 3</a>
+                    <a href="galeria.html">galeria</a>
                 </li>
             </ul>
         </nav>
