Cargar formulario con nombre y mensaje. Commit solo formulario no imagen

--- a/contacto.html
+++ b/contacto.html
@@ -22,6 +22,8 @@
                     <a href="galeria.html">galeria</a>
                 </li>
             </ul>
+            <input type="text" name="Nombre" id="Nombre">
+            <input type="text" name="Mensaje" id="mensaje">
         </nav>
     </header>
     <h1>contacto</h1>
