--- a/contacto.html
+++ b/contacto.html
@@ -22,8 +22,15 @@
                     <a href="galeria.html">galeria</a>
                 </li>
             </ul>
-            <input type="text" name="Nombre" id="Nombre">
-            <input type="text" name="Mensaje" id="mensaje">
+            <form action="">
+                <div><label for="Nombre"></label>
+                    <input type="text" name="Nombre" id="Nombre">
+                </div>
+                <div><label for="Mensaje"></label>
+                    <textarea name="" id="Mensaje" cols="30" rows="10"></textarea>
+                </div>
+
+            </form>
         </nav>
     </header>
     <h1>contacto</h1>
