Formulario con imagen insertado

--- a/contacto.html
+++ b/contacto.html
@@ -26,6 +26,7 @@
                 <div><label for="Nombre"></label>
                     <input type="text" name="Nombre" id="Nombre">
                 </div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/San_Francisco_from_the_Marin_Headlands_in_March_2019.jpg/1920px-San_Francisco_from_the_Marin_Headlands_in_March_2019.jpg" alt="San Francisco">
                 <div><label for="Mensaje"></label>
                     <textarea name="" id="Mensaje" cols="30" rows="10"></textarea>
                 </div>
