--- a/servicios.html
+++ b/servicios.html
@@ -8,6 +8,22 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">inicio</a>
+                </li>
+                <li>
+                    <a href="contacto.html">contacto</a>
+                </li>
+                <li>
+                    <a href="galeria.html">galeria</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <h1>Servicios</h1>
 
 </body>
 
