indexado de servicios en todos los ficheros

--- a/servicios.html
+++ b/servicios.html
@@ -20,6 +20,9 @@
                 <li>
                     <a href="galeria.html">galeria</a>
                 </li>
+                <li>
+                    <a href="servicios.html">servicios</a>
+                </li>
             </ul>
         </nav>
     </header>
