--- a/contacto.html
+++ b/contacto.html
@@ -21,6 +21,9 @@
                 <li>
                     <a href="galeria.html">galeria</a>
                 </li>
+                <li>
+                    <a href="servicios.html">servicios</a>
+                </li>
             </ul>
             <form action="">
                 <div><label for="Nombre"></label>
