--- a/galeria.html
+++ b/galeria.html
@@ -24,7 +24,9 @@
             </ul>
         </nav>
     </header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/San_Francisco_from_the_Marin_Headlands_in_March_2019.jpg" alt="San Francisco">
+    <h1>Album de fotos</h1>
+    <figure><img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/San_Francisco_from_the_Marin_Headlands_in_March_2019.jpg" alt="San Francisco"></figure>
+
 </body>
 
 </html>
